fix align

--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -69,7 +69,7 @@
 @heading-3-size: ceil(@font-size-base * 1.71);
 @heading-4-size: ceil(@font-size-base * 1.42);
 // https://github.com/ant-design/ant-design/issues/20210
-@line-height-base: 1.5715;
+@line-height-base: 1.5714;
 @border-radius-base: 2px;
 
 // vertical paddings
